# sysml-v2-transfer

./: .gitignore  AGENTS.md  BACKLOG.md  LICENSE  NOTICE  README.md  pyproject.toml
cli/: LICENSE  __init__.py  main.py
core/: __init__.py  ast.py  convert.py  layout.py  parser.py  svg.py  svg_theme.py  text_layout.py
examples/: smoke.sysml
gui/: LICENSE  __init__.py  app.py
tests/: test_cli.py  test_core.py
